@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix support for formatters that show buffered events
+
 0.000018  2016-06-24 06:00:04-07:00 America/Los_Angeles
 
     - No changes since last trial
